Bug 67143 - Can't mouse-click on an article more than 18 thread levels deep
Summary: Can't mouse-click on an article more than 18 thread levels deep
Status: RESOLVED FIXED
Alias: None
Product: knode
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 58484 88946 92891 (view as bug list)
Depends on:
Blocks:
 
Reported: 2003-11-03 21:51 UTC by Tristan Miller
Modified: 2005-10-01 18:00 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tristan Miller 2003-11-03 21:51:10 UTC
Version:            (using KDE KDE 3.1.4)
Installed from:    SuSE RPMs

It is not possible to use the mouse to view an article more than 18 thread levels deep (i.e., with more than 18 references, the headers for all of which are stored locally by KNode).

Attempted action:  Click on such an article's author in the article list (since the subject will usually be out of sight).

Expected result:  Clicked row should be selected with an "active" highlight bar, and the corresponding article should display in the message pane.

Actual result:  Clicked row is selected with an "inactive" highlight bar; the "active" highlight bar remains over whatever message was previously selected.  The article in the message pane does not change.

However, using the keyboard to select the article (i.e., using the up/down arrows to move the inactive highlight bar to the correct article and then pressing enter) works as expected.

An example of an article evoking this behaviour is <0b53qvo99gcbe7m3ctku9vtu5uv28k8csu@4ax.com>.  (This message is part of a thread which goes over 20 levels deep.)

I have a feeling that this bug may be related in some way to Bug 67141.  At least, they always co-occur for messages over 18 levels deep.
Comment 1 Tristan Miller 2004-05-27 16:42:03 UTC
Bug still occurs with KDE 3.2.1 and KDE 3.2.2.
Comment 2 Tristan Miller 2004-11-18 11:47:51 UTC
Bug still occurs in KDE 3.3.1.
Comment 3 Volker Krause 2004-12-11 12:32:24 UTC
*** Bug 92891 has been marked as a duplicate of this bug. ***
Comment 4 Volker Krause 2004-12-14 15:00:29 UTC
*** Bug 88946 has been marked as a duplicate of this bug. ***
Comment 5 Volker Krause 2004-12-15 15:36:05 UTC
CVS commit by vkrause: 

- Fix mouse selection of articles in very deep threads (#67143)
- Remove some unused code

BUG: 67143


  M +0 -40     knconfig.cpp   1.82
  M +8 -11     knconfig.h   1.77
  M +1 -2      knconfigwidgets.cpp   1.123
  M +30 -75    knlistview.cpp   1.58
  M +2 -15     knlistview.h   1.38
  M +0 -5      knmainwidget.cpp   1.56
  M +2 -2      pics/Makefile.am   1.13
  R            pics/server.png   1.5
  R            pics/server_big.png   1.4



Comment 6 Volker Krause 2005-10-01 18:00:19 UTC
*** Bug 58484 has been marked as a duplicate of this bug. ***