- Fix mouse selection of articles in very deep threads (#67143) - Remove some unused code

BUG: 67143

svn path=/trunk/kdepim/; revision=370761